firefox 61.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "fyTjQfaPQKaHGJPtTs8o2w"
+                ],
+                [
+                    "ship_rc",
+                    "e8zM6iu6QlGP08rWTQWyxw"
                 ]
             ],
             "human_tasks": [
