firefox 61.0rc - updated inflight issue. Resolved ('3',)

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -83,7 +83,7 @@
                     "bug": "1469607",
                     "description": "Partner repacks run into fail / exception for various reason. Are these tasks supposed to exist in this graph altogether?",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "mtabara"
                 }
             ]
