firefox 61.0rc - added promote_rc graphid.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 2,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote_rc",
+                    "ZMNXdZeLRrqfH0q5lQkkIA"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
