--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -21,7 +21,7 @@
                     "alias": "wnp",
                     "description": "setup whatsnew page",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto-rc.md#wnp",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "ship-rc",
