firefox 61.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "ZMNXdZeLRrqfH0q5lQkkIA"
+                ],
+                [
+                    "ship_rc",
+                    "O0oux-ScQ7yegIW8OmVUDg"
                 ]
             ],
             "human_tasks": [
