fennec 61.0rc - added ship_rc graphid.

--- a/inflight/fennec/fennec-release-rc-61.0rc.json
+++ b/inflight/fennec/fennec-release-rc-61.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "TPCLIpGFRQixnj7c5WV9ig"
+                ],
+                [
+                    "ship_rc",
+                    "Omf_Oac6Tru_BXEBAw6RBg"
                 ]
             ],
             "human_tasks": [
