--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 3,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote_rc",
+                    "aa1dnp2ZTXOyGYp3k-3sOA"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
