firefox 61.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "aa1dnp2ZTXOyGYp3k-3sOA"
+                ],
+                [
+                    "ship_rc",
+                    "TPbSysDvQ7ynnldVXZYY-w"
                 ]
             ],
             "human_tasks": [
