fennec 61.0rc - added ship_rc graphid.

--- a/inflight/fennec/fennec-release-rc-61.0rc.json
+++ b/inflight/fennec/fennec-release-rc-61.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "LLASAYLmS76_Uqkt3oBmyQ"
+                ],
+                [
+                    "ship_rc",
+                    "VFbwdNGKTjel7yOIF5nSJw"
                 ]
             ],
             "human_tasks": [
