firefox 61.0rc - added push graphid.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "TPbSysDvQ7ynnldVXZYY-w"
+                ],
+                [
+                    "push",
+                    "INkbsR6SReiUxMTUb5iMJg"
                 ]
             ],
             "human_tasks": [
