--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -53,7 +53,7 @@
                     "alias": "remove_old_wnp",
                     "description": "remove previous version's What's New Page",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto-rc.md#remove-wnp",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "ship",
