firefox 61.0rc - added ship graphid.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -16,6 +16,10 @@
                 [
                     "push",
                     "INkbsR6SReiUxMTUb5iMJg"
+                ],
+                [
+                    "ship",
+                    "YB5DWYnUQSa6uG3mY0V2mw"
                 ]
             ],
             "human_tasks": [
