fennec 61.0rc - added ship graphid.

--- a/inflight/fennec/fennec-release-rc-61.0rc.json
+++ b/inflight/fennec/fennec-release-rc-61.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "VFbwdNGKTjel7yOIF5nSJw"
+                ],
+                [
+                    "ship",
+                    "dc581D2RTZ-TaEKOQjDcUw"
                 ]
             ],
             "human_tasks": [
