thunderbird 52.9 - updated inflight issue. Resolved ('1',)

--- a/inflight/thunderbird/thunderbird-release-52.9.json
+++ b/inflight/thunderbird/thunderbird-release-52.9.json
@@ -41,8 +41,8 @@
                 {
                     "bug": null,
                     "description": "Python updates include incompatible fabric update. ([PR](https://github.com/mozilla-releng/build-puppet/pull/93))",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "tomprince"
                 }
             ]
