firefox 61.0.1 - updated inflight issue.

--- a/inflight/firefox/firefox-release-61.0.1.json
+++ b/inflight/firefox/firefox-release-61.0.1.json
@@ -37,7 +37,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1473286",
+                    "description": "Action task couldn't start: git@github.com:mozilla-partners/playanext doesn't exist",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
+                }
+            ]
         }
     ],
     "preflight": {
