firefox 61.0.1 - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-61.0.1.json
+++ b/inflight/firefox/firefox-release-61.0.1.json
@@ -41,8 +41,8 @@
                 {
                     "bug": "1473286",
                     "description": "Action task couldn't start: git@github.com:mozilla-partners/playanext doesn't exist",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 },
                 {
