--- a/inflight/firefox/firefox-release-61.0.1.json
+++ b/inflight/firefox/firefox-release-61.0.1.json
@@ -27,7 +27,7 @@
                     "alias": "mirrors",
                     "description": "pushed to mirrors/releases",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto.md#push-artifacts-to-releases-directory",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "ship",
