firefox 61.0.1 - added push graphid.

--- a/inflight/firefox/firefox-release-61.0.1.json
+++ b/inflight/firefox/firefox-release-61.0.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "DgylP9ewT_2-SLCclTex0A"
+                ],
+                [
+                    "push",
+                    "c2ZFX1fVRXK2Yb4dIEn97w"
                 ]
             ],
             "human_tasks": [
