firefox 61.0.1 - added ship graphid.

--- a/inflight/firefox/firefox-release-61.0.1.json
+++ b/inflight/firefox/firefox-release-61.0.1.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "c2ZFX1fVRXK2Yb4dIEn97w"
+                ],
+                [
+                    "ship",
+                    "FxEaaQLERky3oIpsRiuCuQ"
                 ]
             ],
             "human_tasks": [
