thunderbird 52.9.1 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-52.9.1.json
+++ b/inflight/thunderbird/thunderbird-release-52.9.1.json
@@ -37,7 +37,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "Buildbot reconfig lock was stuck - Adrian Pop from ciduty unwedged it and a new build was started",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "tomprince"
+                }
+            ]
         }
     ],
     "preflight": {
