--- a/inflight/thunderbird/thunderbird-release-52.9.1.json
+++ b/inflight/thunderbird/thunderbird-release-52.9.1.json
@@ -28,7 +28,7 @@
                     "alias": "signoff",
                     "description": "signoff in Balrog",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto.md#obtain-sign-offs-for-changes",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "postrelease",
