thunderbird 60.0 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-60.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.0.json
@@ -42,7 +42,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "?",
+                    "description": "update verify config gen: FATAL - Didn't find any update paths, cannot continue",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
+                }
+            ]
         }
     ],
     "preflight": {
