thunderbird 60.0 - updated inflight issue. Resolved ('2',)

--- a/inflight/thunderbird/thunderbird-release-60.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.0.json
@@ -54,8 +54,8 @@
                 {
                     "bug": "1472860",
                     "description": "Signing issues with newly enabled mdc1 servers. Aki disabled them.",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "nthomas"
                 }
             ]
