thunderbird 60.0 - added push graphid.

--- a/inflight/thunderbird/thunderbird-release-60.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.0.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "RCniTnXJSnuBMHzqwx5DzA"
+                ],
+                [
+                    "push",
+                    "D7-u7xOMSYO1kqfH3g5PQw"
                 ]
             ],
             "human_tasks": [
