thunderbird 60.0 - added ship graphid.

--- a/inflight/thunderbird/thunderbird-release-60.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.0.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "D7-u7xOMSYO1kqfH3g5PQw"
+                ],
+                [
+                    "ship",
+                    "B5SChkanQf2ahu0Kr1POgQ"
                 ]
             ],
             "human_tasks": [
