--- a/inflight/thunderbird/thunderbird-release-60.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.0.json
@@ -52,6 +52,13 @@
                     "id": 1,
                     "resolved": false,
                     "who": "nthomas"
+                },
+                {
+                    "bug": "1481198",
+                    "description": "Wrong bouncer entries are updated by automation. I manually changed the bouncer alias and cancelled+rerun the next task (a16X_sdwSxKSnErZgCb6oQ)",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
                 }
             ]
         },
