thunderbird 60.0 - updated inflight issue. Resolved ('2',)

--- a/inflight/thunderbird/thunderbird-release-60.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.0.json
@@ -57,7 +57,7 @@
                     "bug": "1481198",
                     "description": "Wrong bouncer entries are updated by automation. I manually changed the bouncer alias and cancelled+rerun the next task (a16X_sdwSxKSnErZgCb6oQ)",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 },
                 {
