fennec 61.0.2 - added promote graphid.

--- a/inflight/fennec/fennec-release-61.0.2.json
+++ b/inflight/fennec/fennec-release-61.0.2.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "OQd-IVyLSTK-HInS8lVrXQ"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
