firefox 61.0.2 - added push graphid.

--- a/inflight/firefox/firefox-release-61.0.2.json
+++ b/inflight/firefox/firefox-release-61.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "bLKZsxWsSqO71PLziWAUTg"
+                ],
+                [
+                    "push",
+                    "faHC2a7tRU23Z09Fpy35Iw"
                 ]
             ],
             "human_tasks": [
