--- a/inflight/firefox/firefox-release-61.0.2.json
+++ b/inflight/firefox/firefox-release-61.0.2.json
@@ -46,7 +46,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "snap push failed. It timed out after uploading the snap. Resolved by manually promoting this snap to the candidate channel",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
+                }
+            ]
         }
     ],
     "preflight": {
