firefox 61.0.2 - added ship graphid.

--- a/inflight/firefox/firefox-release-61.0.2.json
+++ b/inflight/firefox/firefox-release-61.0.2.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "faHC2a7tRU23Z09Fpy35Iw"
+                ],
+                [
+                    "ship",
+                    "PpO4FsWDSfuDbRQwdeKj8A"
                 ]
             ],
             "human_tasks": [
