fennec 61.0.2 - added ship graphid.

--- a/inflight/fennec/fennec-release-61.0.2.json
+++ b/inflight/fennec/fennec-release-61.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "OQd-IVyLSTK-HInS8lVrXQ"
+                ],
+                [
+                    "ship",
+                    "K9ycUzcgRz60Yh2wHxYjwg"
                 ]
             ],
             "human_tasks": [
