firefox 62.0rc - updated inflight issue. Resolved ('3',)

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -79,7 +79,7 @@
                     "bug": "1486747",
                     "description": "\"Firefox-62.0build1-Complete\" in bouncer didn't have any location set. Bouncerscript should add them even when the product already exists.",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 }
             ]
