firefox 62.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "clacPCDwRYWZJHdZzRP0cA"
+                ],
+                [
+                    "ship_rc",
+                    "INov5AXESsKrxpUscPS5Gg"
                 ]
             ],
             "human_tasks": [
