--- a/inflight/fennec/fennec-release-rc-62.0rc.json
+++ b/inflight/fennec/fennec-release-rc-62.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "YJ1M0j2qRMGX5z5IuwJ_KA"
+                ],
+                [
+                    "ship_rc",
+                    "FxZuebE9SYasNRyuGvvfvg"
                 ]
             ],
             "human_tasks": [
