--- a/inflight/fennec/fennec-release-rc-62.0rc.json
+++ b/inflight/fennec/fennec-release-rc-62.0rc.json
@@ -34,7 +34,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1487114",
+                    "description": "Fennec RC: Ship-rc email should be more nuanced than \"fennec 62.0 build1 [...] has shipped!\". Fixed by manually sending a follow up email",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
+                }
+            ]
         }
     ],
     "preflight": {
