fennec 62.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/fennec/fennec-release-rc-62.0rc.json
+++ b/inflight/fennec/fennec-release-rc-62.0rc.json
@@ -39,7 +39,7 @@
                     "bug": "1487114",
                     "description": "Fennec RC: Ship-rc email should be more nuanced than \"fennec 62.0 build1 [...] has shipped!\". Fixed by manually sending a follow up email",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 }
             ]
