fennec 62.0rc - added promote graphid.

--- a/inflight/fennec/fennec-release-rc-62.0rc.json
+++ b/inflight/fennec/fennec-release-rc-62.0rc.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 2,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "RbjdmL1NTuqrY9_0HpC7Qw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
