firefox 62.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "An7X0OORTaC-NUrp-7AG6g"
+                ],
+                [
+                    "ship_rc",
+                    "JB3ZYdXXRMW_DC6u02HQpQ"
                 ]
             ],
             "human_tasks": [
