fennec 62.0rc - added ship_rc graphid.

--- a/inflight/fennec/fennec-release-rc-62.0rc.json
+++ b/inflight/fennec/fennec-release-rc-62.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "RbjdmL1NTuqrY9_0HpC7Qw"
+                ],
+                [
+                    "ship_rc",
+                    "W16eDSJWQmKKEI9aAfWWPg"
                 ]
             ],
             "human_tasks": [
