--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -64,7 +64,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1488396",
+                    "description": "Snap push failed. It timed out after uploading the snap. Resolved by manually promoting this snap to the candidate channel",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
+                }
+            ]
         },
         {
             "aborted": true,
