firefox 62.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -69,7 +69,7 @@
                     "bug": "1488396",
                     "description": "Snap push failed. It timed out after uploading the snap. Resolved by manually promoting this snap to the candidate channel",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 }
             ]
