firefox 62.0rc - added push graphid.

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "JB3ZYdXXRMW_DC6u02HQpQ"
+                ],
+                [
+                    "push",
+                    "UQd6GS1uRxqTZDpbG8e43Q"
                 ]
             ],
             "human_tasks": [
