firefox 62.0rc - added ship graphid.

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -16,6 +16,10 @@
                 [
                     "push",
                     "UQd6GS1uRxqTZDpbG8e43Q"
+                ],
+                [
+                    "ship",
+                    "PSoa6nqqS9uG4qr5gpiszQ"
                 ]
             ],
             "human_tasks": [
