firefox 62.0rc - added ship graphid.

--- a/inflight/firefox/firefox-release-rc-62.0rc.json
+++ b/inflight/firefox/firefox-release-rc-62.0rc.json
@@ -19,7 +19,7 @@
                 ],
                 [
                     "ship",
-                    "PSoa6nqqS9uG4qr5gpiszQ"
+                    "BdgTRHu1SxeOfQhbD2ZLXg"
                 ]
             ],
             "human_tasks": [
