--- a/inflight/fennec/fennec-release-rc-62.0rc.json
+++ b/inflight/fennec/fennec-release-rc-62.0rc.json
@@ -31,7 +31,7 @@
                     "alias": "ship",
                     "description": "mark the release as shipped",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/mobile/howto-rc.md#ship",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
